Wed Sep 22 16:58:05 BST 2004 (trog)
-----------------------------------
  * libclamav/htmlnorm.c: fix possible crash with broken html
		(can only trigger when using FOLLOWURL)

Wed Sep 22 16:53:02 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Scan RFC2298 messages

Wed Sep 22 16:24:08 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Correct typo in previous fix

Tue Sep 21 21:49:06 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	FOLLOWURL: Set a default username and password for
				password protected sites to avoid the password
				prompt bug with older versions of libcurl

Tue Sep 21 19:01:32 CEST 2004 (tk)
----------------------------------
  * libclamav/filetypes.c: fix PK00PK zip rule (thanks to <steveb*webtribe.net>)
  V 0.80rc2

Tue Sep 21 15:56:35 BST 2004 (njh)
----------------------------------
  * libclamav:	Fix handling of empty lines in text/plain emails

Tue Sep 21 13:20:31 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Fallback to CURLOPT_FILE if CURLOPT_WRITEDATA isn't
				defined

Tue Sep 21 10:27:29 BST 2004 (njh)
----------------------------------
  * libclamav/blob.c:	When built with "--enable-debug", closing a closed blob
				is no longer fatal

Tue Sep 21 09:15:48 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Now compiles in machines with libcurl but without
				posix threads

Tue Sep 21 03:25:59 CEST 2004 (tk)
----------------------------------
  * libclamav/filetypes.c: fix JPEG rule

Mon Sep 20 18:08:53 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Some performance enhancements

Mon Sep 20 15:31:21 CEST 2004 (tk)
----------------------------------
  V 0.80rc

Mon Sep 20 13:46:15 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Fix parsing problem
  * clamav-milter:	Up issue

Mon Sep 20 12:12:09 CEST 2004 (tk)
----------------------------------